--- a/css/style.css
+++ b/css/style.css
@@ -15,37 +15,23 @@ main {
 	height: 50px;
 	margin-top: 5px;
 }
-/* Menu - profile */
-.bg-card-user {
-	background: rgba(0,77,64,.5);
-	padding: 15px 0;
-}
-.truncate >img {
-	width: 180px;
-	margin-top: 6px;
-	margin-bottom: 6px;
-}
-/* FOOTER */
-footer .foot-text {
-	margin-top: 10px;
+
+.hidden {
+    display: none;
 }
 
-/* LOGIN */
-.logueo {/* PARALLAX */
-    height: 650px!important;
+.listadoMesas .card {
+    background-color: #546e7a;
 }
-i.iconis {
-    font-size: 1em!important;
-    margin-top: 8px;
-}
-.login {
-    border: 1px solid #FFF;
-    width: 80%;
-    margin: 0 auto;
-    background-color: rgba(255,255,255,.7);
-    padding: 20px;
+.listadoMesas .card.ocupada {
+    background-color: #ff0000;
 }
 
-#usuario-login {
-    width: 100px;
+.listadoMesas .disponible .comensales,
+.listadoMesas .disponible .btn-cancelar {
+    display: none;
+}
+.listadoMesas .ocupada .textoDisponible,
+.listadoMesas .ocupada .btn-reservar {
+    display: none;
 }
